<resources>
    <string name="app_name" translatable="false">Wallpaper</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_app_open_id" translatable="false">ca-app-pub-3940256099942544/9257395921</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <string name="admob_Rewarded_ads_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_Collapsible_id" translatable="false">ca-app-pub-3940256099942544/2014213617</string>
    <string name="admob_Interstitial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="transparency">Transparency</string>
    <string name="reveal_your_screens_beauty">Reveal your screen\'s beauty with Transparent Wallpaper.</string>
    <string name="crystal">Crystal</string>
    <string name="clarity_and_style">Clarity and style meet in Transparent Wallpaper.</string>
    <string name="clearvision">ClearVision</string>
    <string name="elevate_your_screens_allure">Elevate your screen\'s allure with Transparent Wallpaper.</string>
    <string name="next">Next</string>
    <string name="transparent_wallpaper">Transparent Wallpaper</string>
    <string name="Rate">Rate</string>
    <string name="Share">Share</string>
    <string name="Feedback">Feedback</string>
    <string name="Policy">Policy</string>
    <string name="Explore">Explore</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="both">Both</string>
    <string name="lock_screen_wallpaper_set_successfully">Lock screen wallpaper set successfully</string>
    <string name="done">Done</string>
    <string name="hd_wallpapers">HD Wallpapers</string>
    <string name="set_wallpapers">Set Wallpapers</string>
    <string name="swipe_to_see_more">Swipe to see more</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="typing_wallpaper">Typing Wallpaper</string>
    <string name="mirror_wallpaper">Mirror Wallpaper</string>
    <string name="select_option">SELECT OPTION</string>
    <string name="ok">Ok</string>
    <string name="how_is_your_experience">How is your experience</string>
    <string name="your_opinion_means_to_us">Your opinion means to us</string>
</resources>