<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language"
            
            android:orderInCategory="100"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/Rate"
            android:orderInCategory="200"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/Share"
            android:orderInCategory="300"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/Feedback"
            android:orderInCategory="400"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_policy"
            android:title="@string/Policy"
            android:orderInCategory="500"
            app:showAsAction="never"/>

</menu>