<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp"
    android:background="@drawable/custom_bgr_rate"
    >


    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:padding="10sp"
        android:src="@drawable/rate_ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#859897" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imgClose">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/how_is_your_experience"
            android:textColor="#121212"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"

            android:text="@string/your_opinion_means_to_us"
            android:textColor="#9098A3"
            android:textSize="12sp" />
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="2.5"
            android:stepSize="0.5"
            android:progressTint="#ff0"
            android:progressBackgroundTint="#9098A3"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30sp"
            android:text="@string/Rate"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="10sp"

            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/custom_item_language"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>