<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_dialog_select_option"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginHorizontal="15sp"
    android:paddingVertical="30sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/plusjakartasans_regular"
        android:text="@string/select_option"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250sp"
        android:layout_height="44sp"
        android:background="@drawable/custom_button_select_option"
        android:paddingHorizontal="15sp"
        android:id="@+id/cst_LockScreen"
        android:layout_marginTop="15sp">

        <ImageView
            android:id="@+id/imgLockScreen"
            android:layout_width="14.5sp"
            android:layout_height="18.6sp"
            android:src="@drawable/ic_lock_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/lock_screen"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imgLockScreen"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgradioLockScreen"
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:src="@drawable/ic_select_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250sp"
        android:layout_height="44sp"
        android:background="@drawable/custom_button_select_option"
        android:paddingHorizontal="15sp"
        android:id="@+id/cst_HomeScreen"
        android:layout_marginTop="15sp">

        <ImageView
            android:id="@+id/imgHomeScreen"
            android:layout_width="14.5sp"
            android:layout_height="18.6sp"
            android:src="@drawable/ic_home_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/home_screen"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imgHomeScreen"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgradioHomeScreen"
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:src="@drawable/ic_select_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250sp"
        android:layout_height="44sp"
        android:background="@drawable/custom_button_select_option"
        android:paddingHorizontal="15sp"
        android:id="@+id/cst_BothScreen"
        android:layout_marginTop="15sp">

        <ImageView
            android:id="@+id/imgBothScreen"
            android:layout_width="14.5sp"
            android:layout_height="18.6sp"
            android:src="@drawable/ic_both_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/both"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imgBothScreen"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgradioBothScreen"
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:src="@drawable/ic_select_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
<Button
    android:id="@+id/btnSelectOptions"
    android:layout_width="250sp"
    android:layout_height="44sp"
    android:background="@drawable/custom_button_set_wallpaper"
    android:textColor="#ffffff"
    android:text="@string/ok"
    android:layout_marginTop="15sp"
    />

</LinearLayout>