<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Screen.Home.TransparentWallpaper">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_background_sao">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_menu"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16sp"
                    android:layout_marginTop="16sp"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtToolBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16sp"
                    android:fontFamily="@font/angkor_regular"
                    android:text="@string/transparent_wallpaper"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/img_menu"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTransparentWallpaper"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_vien_anh">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2sp"
                            android:clipToOutline="true"
                            app:cardCornerRadius="16sp"
                            app:cardElevation="4dp">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/img_home" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical|right"
                                    android:layout_marginRight="20dp"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textOverlay"
                                        android:layout_width="120sp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="16dp"
                                        android:background="@android:color/transparent"
                                        android:fontFamily="@font/plusjakartasans_bold"
                                        android:text="@string/transparent_wallpaper"
                                        android:textAlignment="center"
                                        android:textColor="@android:color/white"
                                        android:textSize="18sp" />

                                    <Button
                                        android:id="@+id/buttonOverlay"
                                        android:layout_width="120sp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="16dp"
                                        android:fontFamily="@font/plusjakartasans_bold"
                                        android:background="@drawable/custom_btn_explore"
                                        android:text="@string/Explore"
                                        android:textColor="#ffffff"
                                        android:textSize="16sp" />
                                </LinearLayout>
                            </FrameLayout>

                        </androidx.cardview.widget.CardView>

                    </FrameLayout>
                </androidx.cardview.widget.CardView>


                <FrameLayout
                    android:id="@+id/nativeframeHome_ads"
                    android:layout_width="match_parent"
                    android:layout_height="208dp"
                    android:layout_marginHorizontal="16sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardTransparentWallpaper">

                    <include layout="@layout/ads_native_shimer" />
                </FrameLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="208dp"
                    android:layout_marginHorizontal="16sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/nativeframeHome_ads">

                    <FrameLayout
                        android:layout_width="156sp"
                        android:layout_height="212dp"
                        android:background="@drawable/custom_vien_anh"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="208dp"
                            android:layout_margin="2sp"
                            android:scaleType="centerInside"
                            android:layout_gravity="center"
                            android:src="@drawable/img_bgr_itemhome_to" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5sp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6sp"
                                android:src="@drawable/ic_message" />

                            <TextView
                                android:layout_width="150sp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="7sp"
                                android:fontFamily="@font/plusjakartasans_regular"
                                android:text="@string/typing_wallpaper"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </FrameLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="156sp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5sp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="100sp"
                            android:background="@drawable/custom_vien_anh"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="100sp"
                                android:layout_gravity="center"
                                android:layout_margin="1dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/img_bgr_item_homenho" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:layout_marginBottom="4dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_mirror_wallpapaer" />

                                <TextView
                                    android:layout_width="150sp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/mirror_wallpaper"
                                    android:fontFamily="@font/plusjakartasans_regular"
                                    android:textAlignment="center"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </FrameLayout>


                        <FrameLayout
                            android:id="@+id/hdWallPaper"
                            android:layout_width="match_parent"
                            android:layout_height="100sp"
                            android:background="@drawable/custom_vien_anh"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="100sp"
                                android:layout_gravity="center"
                                android:layout_margin="1sp"
                                android:scaleType="centerInside"
                                android:src="@drawable/img_bgr_item_homenho"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    android:src="@drawable/ic_hd_walllpaper" />

                                <TextView
                                    android:layout_width="150sp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hd_wallpapers"
                                    android:fontFamily="@font/plusjakartasans_regular"
                                    android:textAlignment="center"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </FrameLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/frameLayoutMainn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#1C2530"
            app:headerLayout="@layout/item_header_menu"
            app:itemIconTint="@color/white"
            app:itemShapeFillColor="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/activity_main_drawer">

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="50dp"
                android:textColor="#787B82" />
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

    <include
        android:id="@+id/includeHome"
        layout="@layout/layout_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
